Fix default gap in status prepend

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.1.2rc6 */
+   2.1.2rc7 */
 
 /* CSS variables */
 :root {
@@ -2073,6 +2073,7 @@ body.embed .detailed-status__meta .detailed-status__link .icon-retweet,
 }
 
 .layout-multiple-columns .status__prepend {
+  gap: var(--gap-default);
   padding-left: calc(var(--size-avatar) - 4px);
 }
 
